Fixed navbar on small devices, added footer and .gitignore

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .navbar-nav {
-    flex-direction: row;
+    /*flex-direction: row;*/
 }
 
 .nav-link {
@@ -21,6 +21,12 @@ nav.navbar{
 /*// Animation*/
 -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
+}
+
+.form-inline button {
+    text-transform: uppercase;
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 18px;
 }
 
 .logo {
@@ -76,4 +82,9 @@ nav.navbar.shrink .logo {
     background: #15a8c0;
     color: #FFF;
     min-height: 500px;
+}
+
+footer {
+    background-color: #343a40;
+    color: #FFF;
 }
